styles/mockup/mockup.css
/* ... */
.bootstrap-hover-color {
  color: #722CF8;
}

.tailwind-p-hover-color {
  color: #36BDF9
}

.js-icon:hover,
.js-icon:hover+.js-icon-p,
.js-icon-p:hover {
  color: #F0DB4F;
}

.js-hover-color {
  color: #F0DB4F;
}

.react-icon:hover,
.react-icon:hover+.react-icon-p,
.react-icon-p:hover {
  color: #62DAFB;
}

.react-hover-color {
  color: #62DAFB;
}

.figma-icon:hover,
.figma-icon:hover+.figma-icon-p,
.figma-icon-p:hover {
  animation: figmaGradientAnimation 3.75s ease 0s infinite normal none;
}

.figma-hover-color {
  animation: figmaGradientAnimation 3.75s ease 0s infinite normal none;
}

@keyframes figmaGradientAnimation {
  0% {
    color: hsla(13, 80%, 51%, 1);
  }

  20% {
    color: hsla(6, 85%, 66%, 1);
  }

  40% {
    color: hsla(267, 85%, 64%, 1);
  }

  60% {
    color: hsla(197, 89%, 52%, 1);
  }

  80% {
    color: hsla(156, 86%, 41%, 1);
  }

  100% {
    color: hsla(13, 80%, 51%, 1);
  }
}

@-webkit-keyframes figmaColorAnimation {
  0% {
    color: hsla(13, 80%, 51%, 1);
  }

  20% {
    color: hsla(6, 85%, 66%, 1);
  }

  40% {
    color: hsla(267, 85%, 64%, 1);
  }

  60% {
    color: hsla(197, 89%, 52%, 1);
  }

  80% {
    color: hsla(156, 86%, 41%, 1);
  }

  100% {
    color: hsla(13, 80%, 51%, 1);
  }
}

@-moz-keyframes figmaColorAnimation {
  0% {
    color: hsla(13, 80%, 51%, 1);
  }

  20% {
    color: hsla(6, 85%, 66%, 1);
  }

  40% {
    color: hsla(267, 85%, 64%, 1);
  }

  60% {
    color: hsla(197, 89%, 52%, 1);
  }

  80% {
    color: hsla(156, 86%, 41%, 1);
  }

  100% {
    color: hsla(13, 80%, 51%, 1);
  }
}


/* ------------------------------------
---------------------------------------
PROJECTS SECTION
---------------------------------------
------------------------------------ */

.projects-heading-span {
  position: relative;
}

.projects-heading-span::after {
  content: "";
  position: absolute;
  z-index: -1;
  bottom: -2px;
  left: 21px;
  width: 126px;
  height: 14px;
  background-color: mediumpurple;
}

#projects-top-divider,
#projects-bottom-divider {
  position: relative;
  height: auto;
  min-height: 170px;
  margin-top: -1px;
}

#projects-bottom-divider {
  transform: rotate(180deg);
}

.separator {
  position: absolute;
  top: 0;
}

.separator-bottom {
  position: absolute;
  bottom: 0;
}


/* ------------------------------------
---------------------------------------
CONTACT SECTION
---------------------------------------
------------------------------------ */

.contact-heading-span {
  position: relative;
  z-index: 1;
  font-size: 1.2rem;
}

.contact-heading-span::after {
  content: "";
  position: absolute;
  z-index: -1;
  bottom: -2px;
  left: 19px;
  width: 208px;
  height: 9px;
  background-color: mediumpurple;
}

/* CONTACT FORM */
.contact-form {
  max-width: 475px;
  margin: 0 auto;
}

.form-fieldset {
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 0;
}

.form-fieldset legend {
  text-align: center;
}

.lets-connect,
.contact-p {
  margin: 0;
}

.lets-connect {
  font-size: 1rem;
}

.contact-p {
  padding-bottom: 10px;
  font-size: 0.735rem;
  color: mediumpurple;
}

.form-item {
  padding-left: 7px;
  border: 0;
  margin-bottom: 6px;
  background-color: #282828;
}

.form-item-one,
.form-item-two {
  height: 35px;
}

.form-item-three {
  height: 105px;
  padding-top: 10px;
}





















/* ------------------------------------
---------------------------------------
BUTTONS
---------------------------------------
------------------------------------ */

/* ------------------------------------
---------------------------------------
TYPOGRAPY
---------------------------------------
------------------------------------ */

/* ------------------------------------
---------------------------------------
IMAGES
---------------------------------------
------------------------------------ */

/* ------------------------------------
---------------------------------------
FLEX
---------------------------------------
------------------------------------ */

/* ------------------------------------
---------------------------------------
FORMS
---------------------------------------
------------------------------------ */

.contact-info-inputs:focus,
#other-topics:focus {
  outline: 3px solid #cca43b;
}




























/* .hex {
  margin-right: -26px;
  margin-bottom: -50px;
}

.hex .left {
  width: 0;
  border-right: 30px solid #6C6;
  border-top: 52px solid transparent;
  border-bottom: 52px solid transparent;
}

.hex .middle {
  width: 60px;
  height: 104px;
  background: #6C6;
}

.hex .right {
  width: 0;
  border-left: 30px solid #6C6;
  border-top: 52px solid transparent;
  border-bottom: 52px solid transparent;
}

.hex-row {
  width: 60px;
  height: 104px;
  clear: left;
}

.hex.even {
  margin-top: 53px;
} */





























.skills-container {
  position: relative;
  z-index: 1;
}

.hex-flex {
  position: absolute;
  top: -7px;
  left: -24.5px;
  z-index: -1;
  display: flex;
  justify-content: center;
}

.hex-flex-2 {
  position: absolute;
  top: -7px;
  left: -15.5px;
  z-index: -1;
  display: flex;
  justify-content: center;
}

.hex-left {
  z-index: -1;
  height: 0;
  width: 0;
  border-right: 22.5px solid mediumpurple;
  border-top: 39px solid transparent;
  border-bottom: 39px solid transparent;
}

.hex-middle {
  z-index: -1;
  height: 0;
  width: 45px;
  height: 78px;
  background: mediumpurple;
}

.hex-right {
  z-index: -1;
  height: 0;
  width: 0;
  border-left: 22.5px solid mediumpurple;
  border-top: 39px solid transparent;
  border-bottom: 39px solid transparent;
}
/* ... */

